app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
@import "tailwindcss";

/* ===== Global Styles ===== */
@font-face {
	font-family: 'Typewriter-text-regular';
	src: url('../font/cmu.typewriter-text-regular.ttf');
	font-weight: normal;
	font-style: normal;
}

:root {
  --background: #aab2ff;
  --foreground: #1c1665;
  --pink: #eca0ff;
  --pink-shadow:#d490e6;
  --green-light: #cbffe8;
  --green-dark: #84ffc9;
  --transparent: rgba(0,0,0,0.5);
}

@theme {
  --color-purple-t4t: #aab2ff;
  --color-blue-t4t: #1c1665;
  --color-pink-t4t: #eca0ff;
  --color-pink-shadow-t4t: #d490e6;
  --color-green-light: #cbffe8;
  --color-green-dark: #84ffc9;
}

.blue-button {
  /* Inline tailwind used for hover */
  @apply bg-blue-t4t hover:bg-blue-700 text-pink-t4t font-bold py-2 px-10 rounded-full mx-2 text-3xl;
}

.red {
  background-color: red;
  width: 20px;
  height: 20px;
}

.blue {
  background-color: blue;
  width: 20px;
  height: 20px;
}

.green {
  background-color: green;
  width: 20px;
  height: 20px;
}

/* ====== Layout Styles ====== */
.page-content {
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  justify-content: center;
  align-items: center;
}

.background-image {
  background-image: url(../public/background_icons.png);
  background-size: cover;
  background-position: center;
}

.nav {
  width: 100%;
  height: auto;
  margin-bottom:10%
}

.nav-bar {
  height: 1.5rem;
  background-color: var(--pink);
  margin-top: 1.5%;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-end;
  align-items: center;
  align-content: stretch;
  gap: 0px;
}

.divider{
  width: 100%;
  height: 10%;
  background-color: #eca0ff;
}

.header-image {
  width: 100%;
  height: auto;
}

/* ====== HOME ====== */
.container-home {
  height: 100%;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  align-items: stretch;
  align-content: stretch;
  gap: 0px;
}

.tower-home {
  background-color: var(--pink);
  flex-basis: 90%;
  height: 100%;
  display: flex;
}

.tower-home-shadow {
  background-color: var(--pink-shadow);
  flex-basis: 10%;
  height: 100%;
}

.tower-home-content-base {
  background-color: var(--green-dark);
  height: fit-content;
  margin-top: 2%;
  transform: translate(4%, 0%);
  flex-basis: 98%;

  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.bio-base {
  width: 100%;

  display: flex;
  flex-direction: row;
  justify-content: space-evenly;

}

.bio-content{
  background-color: var(--green-light);
  /* height: 30rem; */
  margin: 30px 10px 30px 10px;
  flex-basis: 60%;

  display:flex;
  flex-direction: row;
  align-items: start;
}

.bio-pfp-col {
  flex-basis: 70%;
  /* margin-top: 2rem; */

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: end;
}

.pfp-home {
  width: 50%;
  height: 50%;
  margin: 10% 0% 5% 0%;
  border: 2px solid var(--color-blue-t4t);
}

.bio-text-container {
  flex-basis: 50%;
}

.bio-header {
  font-size: 30px;
  margin: 0rem 2rem 0rem 2rem;
  text-align: center;
}

.bio-text {
  margin: 0rem 2rem 0rem 2rem;
  text-wrap: wrap;
}

.bio-links{
  background-color: var(--green-light);
  margin: 30px 10px 30px 10px;

  flex-basis:30%;
}

.blinkes-base {
  width: 100%;
}

.blinkies-content{
  background-color: var(--green-light);
}



/* ====== BLOG ====== */

.container-blog {
  height: 100%;
  display: flex;
  flex-direction: row-reverse;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: stretch;
  align-content: stretch;
  gap: 0px;
}

/* --- Bio Content --- */
.tower-bio {
  background-color: var(--pink);
  flex-basis: 25%;
  height: 100%;
  display: flex;
}

.tower-bio-shadow {
  background-color: var(--pink-shadow);
  flex-basis: 25%;
  height: 100%;
}

.tower-bio-content-base {
  background-color: var(--green-dark);
  flex-basis: 70%;
  height: fit-content;
  margin-top: 10%;
  transform: translate(15%, 0%);
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.pfp {
  width: 70%;
  margin: 10% 0% 5% 0%;
  border: 10px solid var(--green-light);
}

.pronoun-button{
  text-align: left;
  background-color: var(--foreground);
  color: var(--pink);
  font-weight: 700;
  padding: 2px 14px 2px 14px;
  font-size: 1.3rem;
  width: 70%;
  border-bottom: 2px solid var(--pink);
}

.tower-bio-content-value {
  background-color: var(--green-light);
  width: 70%;
  margin: 5% 0% 5% 0%;
}

.tower-bio-content-text {
  padding: 5px 15px 5px 15px;
}

/* --- Blog Content --- */

.tower-blog {
  background-color: var(--pink);
  flex-basis: 55%;
  height: 100%;
  display: flex;
}

.tower-blog-shadow {
  background-color: var(--pink-shadow);
  flex-basis: 25%;
  height: 100%;
}

.tower-blog-content-col {
  flex-basis: 100%;
  transform: translate(3%, 0%);
  display:flex;
  flex-direction: column;
  align-items: center;
}

.tower-blog-header {
   background-color: var(--green-light);
   height: 180px;
   width: 100%;
   transform: translate(0%, -35%);
   border: 15px solid var(--green-dark);

   display: flex;
   justify-content: center;
   align-items: center;
}

.tower-blog-header-text {
  @apply text-8xl text-center mt-4 text-nowrap
}

.tower-blog-post-base {
  background-color: var(--green-dark);
  height: fit-content;
  width: 100%;
  margin-top: 5%;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.tower-blog-post-content {
  background-color: var(--green-light);
  height: fit-content;
  width: 96%;
  margin-top: 2%
}

.tower-blog-post-tags {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* align-items: flex-end; */
  width: 96%;
  margin-top: 2px;
  height: fit-content;
}

.tower-blog-post-text {
  @apply text-lg text-left m-2 text-wrap
}

.tower-blog-date-text {
  @apply text-xl text-left p-1 my-3 mr-1 text-wrap font-bold border-2 border-blue-t4t bg-green-light
}

.tower-blog-tags-text {
  @apply text-lg text-center p-1 my-3  text-wrap font-bold border-2 border-blue-t4t bg-green-light
}


.tower-blog-post-image {
  width: 96%;
  margin-top: 15px;
  border: 10px solid var(--green-light)
}

